// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should contain correct values for displayLargeStyle 1`] = `
{
  "font": "normal normal 400 clamp(2.28rem, 5.2vw + 1.24rem, 7.48rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`should contain correct values for displayMediumStyle 1`] = `
{
  "font": "normal normal 400 clamp(2.03rem, 3.58vw + 1.31rem, 5.61rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`should contain correct values for displaySmallStyle 1`] = `
{
  "font": "normal normal 400 clamp(1.8rem, 2.41vw + 1.32rem, 4.21rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`should contain correct values for headingLargeStyle 1`] = `
{
  "font": "normal normal 600 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`should contain correct values for headingMediumStyle 1`] = `
{
  "font": "normal normal 600 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`should contain correct values for headingSmallStyle 1`] = `
{
  "font": "normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`should contain correct values for headingXLargeStyle 1`] = `
{
  "font": "normal normal 600 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`should contain correct values for headingXXLargeStyle 1`] = `
{
  "font": "normal normal 600 clamp(1.6rem, 1.56vw + 1.29rem, 3.16rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
}
`;

exports[`should contain correct values for textLargeStyle 1`] = `
{
  "font": "normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
}
`;

exports[`should contain correct values for textMediumStyle 1`] = `
{
  "font": "normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
}
`;

exports[`should contain correct values for textSmallStyle 1`] = `
{
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
}
`;

exports[`should contain correct values for textXLargeStyle 1`] = `
{
  "font": "normal normal 400 clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
}
`;

exports[`should contain correct values for textXSmallStyle 1`] = `
{
  "font": "normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
}
`;

exports[`should contain correct values for textXXSmallStyle 1`] = `
{
  "font": "normal normal 400 .75rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "hyphens": "auto",
  "overflowWrap": "break-word",
}
`;
